downgrade from jhipster 8 to jhipster 7